# CI-nanocourse-Babak

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/CI-Nanocourse-Babak/mypackage/: __hello__.py
src/CI_Nanocourse_Babak/: hello.py  scratch.py  stats.py
src/ci_nanocourse_babak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/CI_Nanocourse_Babak/: test_stats.py
